# sprint3

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.ps1  build.sh  cmakelists.txt  main.cpp  test.sh
core/: chipconfig.bmc  main.cpp  minimalEx.cpp  pwrcycle.sh
core/calib/: a.txt  b.txt  c.txt  t.txt
custom/inc/: AcqController.hpp  CustomDataTypes.hpp  DataProcessor.hpp  Logger.hpp  StorageManager.hpp  globals.h
custom/src/: AcqController.cpp  DataProcessor.cpp  Logger.cpp  StorageManager.cpp
inc/: AcqController.hpp
katherine/: CMakeLists.txt
katherine/c/: CMakeLists.txt
katherine/c/include/katherine/: acquisition.h  config.h  device.h  global.h  px_config.h  status.h  udp.h
katherine/c/src/: acquisition.c  bitfields.h  command_interface.h  config.c  status.c  udp_nix.c  udp_win.c
katherine/cxx/: CMakeLists.txt
katherine/cxx/include/katherinexx/: acquisition.hpp
scripts/: build.sh
src/: AcqController.cpp
tests/: CMakeLists.txt
tests/unit/: all_tests.cc  dataprocessor_tests.cc  safebuff_test.cc  safebuff_tests.cc
